security-groups.tf
/* Default security group */
resource "aws_security_group" "plauground" {
  name        = "plauground-sg"
  vpc_id      = "${ module.vpc.id }"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }


  tags {
    Name = "${var.application}-sg"
  }
}
